--- a/.github/workflows/build-results.yml
+++ b/.github/workflows/build-results.yml
@@ -36,7 +36,7 @@ html_code = f"""<!DOCTYPE html>
 <meta charset='UTF-8'>
 <title>Результаты</title>
 <link rel='stylesheet' href='https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css'/>
-<script src='https://code.jquery.com/jquery-3.6.0.min.js'></script>
+<script src='https://code.jquery.com/jquery-3.5.1.js'></script>
 <script src='https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js'></script>
 </head><body>
 <h2>Результаты OLX</h2>
